Fix redirect URL

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lập Trình Mạng</title>
-    <meta http-equiv="refresh" content="0; url=public/index.html">
+    <meta http-equiv="refresh" content="0; url=/laptrinhmang/public/index.html">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -23,7 +23,7 @@
 <body>
     <div class="loading">
         <h1>Đang chuyển hướng...</h1>
-        <p>Nếu không tự động chuyển, <a href="public/index.html">nhấn vào đây</a></p>
+        <p>Nếu không tự động chuyển, <a href="/laptrinhmang/public/index.html">nhấn vào đây</a></p>
     </div>
 </body>
 </html>
