--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Nguyễn Thanh Trà</title>
-  <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>👨‍💻</text></svg>">
+  <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>ðŸ‘¨â€ðŸ’»</text></svg>">
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -37,25 +37,25 @@
           </div>
         </li>
       </ul>
-      <div class="menu-toggle" onclick="toggleMenu()" aria-label="menu">☰</div>
+      <div class="menu-toggle" onclick="toggleMenu()" aria-label="menu">â˜°</div>
     </nav>
   </header>
   <main>
     <section class="hero">
       <div class="hero-content">
-        <p class="hero-greeting" data-i18n="hero-greeting">Xin chào, tôi là</p>
-        <h1 data-i18n="hero-name">Nguyễn Thanh Trà</h1>
+        <p class="hero-greeting" data-i18n="hero-greeting">Xin chÃ o, tÃ´i lÃ </p>
+        <h1 data-i18n="hero-name">Nguyá»…n Thanh TrÃ </h1>
         <div class="hero-intro">
           <p><strong data-i18n="hero-role">Software Engineer | Backend Developer</strong></p>
-          <p data-i18n="hero-intro-main">Tôi là sinh viên năm 4 yêu thích công nghệ phần mềm, hiện đang tìm hiểu các kiến thức cơ bản về lập trình và phát triển phần mềm. Có tinh thần học hỏi, chủ động rèn luyện tư duy logic và kỹ năng chuyên môn để phục vụ học tập và công việc trong tương lai.</p>
+          <p data-i18n="hero-intro-main">TÃ´i lÃ  sinh viÃªn nÄƒm 4 yÃªu thÃ­ch cÃ´ng nghá»‡ pháº§n má»m, hiá»‡n Ä‘ang tÃ¬m hiá»ƒu cÃ¡c kiáº¿n thá»©c cÆ¡ báº£n vá» láº­p trÃ¬nh vÃ  phÃ¡t triá»ƒn pháº§n má»m. CÃ³ tinh tháº§n há»c há»i, chá»§ Ä‘á»™ng rÃ¨n luyá»‡n tÆ° duy logic vÃ  ká»¹ nÄƒng chuyÃªn mÃ´n Ä‘á»ƒ phá»¥c vá»¥ há»c táº­p vÃ  cÃ´ng viá»‡c trong tÆ°Æ¡ng lai.</p>
         </div>
         <div class="cta">
           <a class="btn primary" href="/posts/" data-i18n="view-posts">Xem portfolio</a>
-          <a class="btn ghost" href="/about/" data-i18n="about-me">Liên hệ</a>
+          <a class="btn ghost" href="/about/" data-i18n="about-me">LiÃªn há»‡</a>
         </div>
       </div>
       <div class="hero-image-wrapper">
-        <img src="/images/133.jpg" alt="Nguyễn Thanh Trà" class="hero-avatar">
+        <img src="/images/133.jpg" alt="Nguyá»…n Thanh TrÃ " class="hero-avatar">
       </div>
     </section>
     <section class="intro">
@@ -69,13 +69,13 @@
     </section>
     
     <section class="certificates-section" style="max-width: 1200px; margin: 4rem auto; padding: 0 2rem;">
-      <h2 style="text-align: center; font-size: 2rem; margin-bottom: 3rem;" data-i18n="certificates">Chứng chỉ và thành tựu</h2>
+      <h2 style="text-align: center; font-size: 2rem; margin-bottom: 3rem;" data-i18n="certificates">Chá»©ng chá»‰ vÃ  thÃ nh tá»±u</h2>
       <div style="display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 2rem;">
         <div class="certificate-card" style="cursor: pointer; border-radius: 8px; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,0,0.1); transition: transform 0.3s; background: white;" onclick="openImageModal('/images/cert-networking-basics.jpg')">
           <img src="/images/cert-networking-basics.jpg" alt="Networking Basics Certificate" style="width: 100%; height: auto; object-fit: contain;">
           <div style="padding: 1.5rem; text-align: center;">
             <h3 style="margin: 0 0 0.5rem 0; font-size: 1.2rem; color: #5b6fce;">Networking Basics</h3>
-            <p style="margin: 0.5rem 0; color: #666; font-size: 0.95rem;">Nguyễn Thanh Trà</p>
+            <p style="margin: 0.5rem 0; color: #666; font-size: 0.95rem;">Nguyá»…n Thanh TrÃ </p>
             <p style="margin: 0.5rem 0; color: #999; font-size: 0.9rem;">Nov 2025</p>
           </div>
         </div>
@@ -84,7 +84,7 @@
           <img src="/images/cert-js-essentials-1.jpg" alt="JavaScript Essentials 1 Certificate" style="width: 100%; height: auto; object-fit: contain;">
           <div style="padding: 1.5rem; text-align: center;">
             <h3 style="margin: 0 0 0.5rem 0; font-size: 1.2rem; color: #5b6fce;">JavaScript Essentials 1</h3>
-            <p style="margin: 0.5rem 0; color: #666; font-size: 0.95rem;">Nguyễn Thanh Trà</p>
+            <p style="margin: 0.5rem 0; color: #666; font-size: 0.95rem;">Nguyá»…n Thanh TrÃ </p>
             <p style="margin: 0.5rem 0; color: #999; font-size: 0.9rem;">Dec 2025</p>
           </div>
         </div>
@@ -93,7 +93,7 @@
           <img src="/images/cert-js-essentials-2.jpg" alt="JavaScript Essentials 2 Certificate" style="width: 100%; height: auto; object-fit: contain;">
           <div style="padding: 1.5rem; text-align: center;">
             <h3 style="margin: 0 0 0.5rem 0; font-size: 1.2rem; color: #5b6fce;">JavaScript Essentials 2</h3>
-            <p style="margin: 0.5rem 0; color: #666; font-size: 0.95rem;">Nguyễn Thanh Trà</p>
+            <p style="margin: 0.5rem 0; color: #666; font-size: 0.95rem;">Nguyá»…n Thanh TrÃ </p>
             <p style="margin: 0.5rem 0; color: #999; font-size: 0.9rem;">Dec 2025</p>
           </div>
         </div>
@@ -108,7 +108,7 @@
     
     <section class="social-section">
       <div class="social-container">
-        <h2 data-i18n="social-title">Xã hội</h2>
+        <h2 data-i18n="social-title">XÃ£ há»™i</h2>
         <div class="social-grid">
           <a href="https://github.com/nttra204" target="_blank" class="social-card">
             <i class="fab fa-github social-icon"></i>
@@ -118,7 +118,7 @@
           <a href="https://www.facebook.com/nguyen.thanh.tra.970568?locale=vi_VN" target="_blank" class="social-card">
             <i class="fab fa-facebook social-icon"></i>
             <h3>Facebook</h3>
-            <p>Nguyễn Thanh Trà</p>
+            <p>Nguyá»…n Thanh TrÃ </p>
           </a>
           <a href="https://www.instagram.com/nttra204_/?igsh=MXVlc3p1NG4zdnBidw%3D%3D&utm_source=qr" target="_blank" class="social-card">
             <i class="fab fa-instagram social-icon"></i>
@@ -128,7 +128,7 @@
           <a href="https://www.linkedin.com/in/nttra204" target="_blank" class="social-card">
             <i class="fab fa-linkedin social-icon"></i>
             <h3>LinkedIn</h3>
-            <p>Nguyễn Thanh Trà</p>
+            <p>Nguyá»…n Thanh TrÃ </p>
           </a>
         </div>
       </div>
@@ -154,11 +154,11 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p><span data-i18n="footer-copyright">© 2025</span> <span data-i18n="site-title">Nguyễn Thanh Trà</span></p>
+        <p><span data-i18n="footer-copyright">Â© 2025</span> <span data-i18n="site-title">Nguyễn Thanh Trà</span></p>
       </div>
     </div>
   </footer>
-  <script src="/js/i18n.js"></script>
+  <script src="/js/i18n.js?v=1.1"></script>
   <script>
   function toggleMenu(){
     document.body.classList.toggle('menu-open');
