--- a/public/about/index.html
+++ b/public/about/index.html
@@ -10,7 +10,7 @@
 
   <title>About - Nguyễn Thanh Trà</title>
 
-  <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>ðŸ‘¨â€ðŸ’»</text></svg>">
+  <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>ðŸ‘¨"€ðŸ’»</text></svg>">
 
   <link rel="stylesheet" href="/css/style.css">
 
@@ -66,7 +66,7 @@
 
       </ul>
 
-      <div class="menu-toggle" onclick="toggleMenu()" aria-label="menu">â˜°</div>
+      <div class="menu-toggle" onclick="toggleMenu()" aria-label="menu">"˜°</div>
 
     </nav>
 
@@ -182,15 +182,15 @@
 
             <ul style="list-style: none; padding: 0; margin: 0; display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 0.8rem;">
 
-              <li data-i18n="knowledge-1" style="padding: 0.5rem 0; color: #6b7280; font-size: 1rem; transition: all 0.3s ease;">âœ“ Láº­p trÃ¬nh hÆ°á»›ng Ä‘á»‘i tÆ°á»£ng (OOP)</li>
+              <li data-i18n="knowledge-1" style="padding: 0.5rem 0; color: #6b7280; font-size: 1rem; transition: all 0.3s ease;">"“ Láº­p trÃ¬nh hÆ°á»›ng Ä‘á»‘i tÆ°á»£ng (OOP)</li>
 
-              <li data-i18n="knowledge-2" style="padding: 0.5rem 0; color: #6b7280; font-size: 1rem; transition: all 0.3s ease;">âœ“ Cáº¥u trÃºc dá»¯ liá»‡u & Giáº£i thuáº­t</li>
+              <li data-i18n="knowledge-2" style="padding: 0.5rem 0; color: #6b7280; font-size: 1rem; transition: all 0.3s ease;">"“ Cáº¥u trÃºc dá»¯ liá»‡u & Giáº£i thuáº­t</li>
 
-              <li data-i18n="knowledge-3" style="padding: 0.5rem 0; color: #6b7280; font-size: 1rem; transition: all 0.3s ease;">âœ“ Láº­p trÃ¬nh máº¡ng & Distributed Systems</li>
+              <li data-i18n="knowledge-3" style="padding: 0.5rem 0; color: #6b7280; font-size: 1rem; transition: all 0.3s ease;">"“ Láº­p trÃ¬nh máº¡ng & Distributed Systems</li>
 
-              <li data-i18n="knowledge-4" style="padding: 0.5rem 0; color: #6b7280; font-size: 1rem; transition: all 0.3s ease;">âœ“ Database Design & Management</li>
+              <li data-i18n="knowledge-4" style="padding: 0.5rem 0; color: #6b7280; font-size: 1rem; transition: all 0.3s ease;">"“ Database Design & Management</li>
 
-              <li data-i18n="knowledge-5" style="padding: 0.5rem 0; color: #6b7280; font-size: 1rem; transition: all 0.3s ease;">âœ“ Software Engineering & Design Patterns</li>
+              <li data-i18n="knowledge-5" style="padding: 0.5rem 0; color: #6b7280; font-size: 1rem; transition: all 0.3s ease;">"“ Software Engineering & Design Patterns</li>
 
             </ul>
 
@@ -218,13 +218,13 @@
 
             <ul style="list-style: none; padding: 0; margin: 0;">
 
-              <li style="padding: 0.5rem 0; color: #6b7280; font-size: 1rem;">âœ“ Java (Spring Boot, Socket Programming, Multithreading, NIO)</li>
+              <li style="padding: 0.5rem 0; color: #6b7280; font-size: 1rem;">"“ Java (Spring Boot, Socket Programming, Multithreading, NIO)</li>
 
-              <li style="padding: 0.5rem 0; color: #6b7280; font-size: 1rem;">âœ“ Node.js (Express.js, Socket.IO, REST API)</li>
+              <li style="padding: 0.5rem 0; color: #6b7280; font-size: 1rem;">"“ Node.js (Express.js, Socket.IO, REST API)</li>
 
-              <li style="padding: 0.5rem 0; color: #6b7280; font-size: 1rem;">âœ“ Database: MySQL, PostgreSQL, MongoDB</li>
+              <li style="padding: 0.5rem 0; color: #6b7280; font-size: 1rem;">"“ Database: MySQL, PostgreSQL, MongoDB</li>
 
-              <li style="padding: 0.5rem 0; color: #6b7280; font-size: 1rem;">âœ“ API Design (RESTful, WebSocket)</li>
+              <li style="padding: 0.5rem 0; color: #6b7280; font-size: 1rem;">"“ API Design (RESTful, WebSocket)</li>
 
             </ul>
 
@@ -240,11 +240,11 @@
 
             <ul style="list-style: none; padding: 0; margin: 0;">
 
-              <li style="padding: 0.5rem 0; color: #6b7280; font-size: 1rem;">âœ“ HTML5, CSS3, JavaScript (ES6+)</li>
+              <li style="padding: 0.5rem 0; color: #6b7280; font-size: 1rem;">"“ HTML5, CSS3, JavaScript (ES6+)</li>
 
-              <li style="padding: 0.5rem 0; color: #6b7280; font-size: 1rem;">âœ“ React/Vue.js basics</li>
+              <li style="padding: 0.5rem 0; color: #6b7280; font-size: 1rem;">"“ React/Vue.js basics</li>
 
-              <li data-i18n="responsive-design" style="padding: 0.5rem 0; color: #6b7280; font-size: 1rem;">âœ“ Responsive Web Design</li>
+              <li data-i18n="responsive-design" style="padding: 0.5rem 0; color: #6b7280; font-size: 1rem;">"“ Responsive Web Design</li>
 
             </ul>
 
@@ -260,13 +260,13 @@
 
             <ul style="list-style: none; padding: 0; margin: 0;">
 
-              <li style="padding: 0.5rem 0; color: #6b7280; font-size: 1rem;">âœ“ Git/GitHub</li>
+              <li style="padding: 0.5rem 0; color: #6b7280; font-size: 1rem;">"“ Git/GitHub</li>
 
-              <li style="padding: 0.5rem 0; color: #6b7280; font-size: 1rem;">âœ“ Docker basics</li>
+              <li style="padding: 0.5rem 0; color: #6b7280; font-size: 1rem;">"“ Docker basics</li>
 
-              <li style="padding: 0.5rem 0; color: #6b7280; font-size: 1rem;">âœ“ Postman, VS Code</li>
+              <li style="padding: 0.5rem 0; color: #6b7280; font-size: 1rem;">"“ Postman, VS Code</li>
 
-              <li style="padding: 0.5rem 0; color: #6b7280; font-size: 1rem;">âœ“ Linux command line</li>
+              <li style="padding: 0.5rem 0; color: #6b7280; font-size: 1rem;">"“ Linux command line</li>
 
             </ul>
 
@@ -292,13 +292,13 @@
 
             <ul style="list-style: none; padding: 0; margin: 0; display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1rem;">
 
-              <li data-i18n="project-1" style="padding: 0.8rem; color: #6b7280; font-size: 1rem; transition: all 0.3s ease; border-left: 3px solid #d1d5db;">âœ“ XÃ¢y dá»±ng TCP/UDP Server vá»›i Java</li>
+              <li data-i18n="project-1" style="padding: 0.8rem; color: #6b7280; font-size: 1rem; transition: all 0.3s ease; border-left: 3px solid #d1d5db;">"“ XÃ¢y dá»±ng TCP/UDP Server vá»›i Java</li>
 
-              <li data-i18n="project-2" style="padding: 0.8rem; color: #6b7280; font-size: 1rem; transition: all 0.3s ease; border-left: 3px solid #d1d5db;">âœ“ PhÃ¡t triá»ƒn RESTful API vá»›i Node.js & Express</li>
+              <li data-i18n="project-2" style="padding: 0.8rem; color: #6b7280; font-size: 1rem; transition: all 0.3s ease; border-left: 3px solid #d1d5db;">"“ PhÃ¡t triá»ƒn RESTful API vá»›i Node.js & Express</li>
 
-              <li data-i18n="project-3" style="padding: 0.8rem; color: #6b7280; font-size: 1rem; transition: all 0.3s ease; border-left: 3px solid #d1d5db;">âœ“ Triá»ƒn khai WebSocket real-time communication</li>
+              <li data-i18n="project-3" style="padding: 0.8rem; color: #6b7280; font-size: 1rem; transition: all 0.3s ease; border-left: 3px solid #d1d5db;">"“ Triá»ƒn khai WebSocket real-time communication</li>
 
-              <li data-i18n="project-4" style="padding: 0.8rem; color: #6b7280; font-size: 1rem; transition: all 0.3s ease; border-left: 3px solid #d1d5db;">âœ“ Security & CORS handling</li>
+              <li data-i18n="project-4" style="padding: 0.8rem; color: #6b7280; font-size: 1rem; transition: all 0.3s ease; border-left: 3px solid #d1d5db;">"“ Security & CORS handling</li>
 
             </ul>
 
@@ -406,7 +406,7 @@
 
       <div class="footer-bottom">
 
-        <p><span data-i18n="footer-copyright">Â© 2025</span> <span data-i18n="site-title">Nguyễn Thanh Trà</span></p>
+        <p><span data-i18n="footer-copyright">© 2025</span> <span data-i18n="site-title">Nguyễn Thanh Trà</span></p>
 
       </div>
 
